@@ -26,7 +26,7 @@
     <parent>
       <groupId>org.jboss</groupId>
       <artifactId>jboss-parent</artifactId>
-      <version>21</version>
+      <version>22</version>
     </parent>
 
     <groupId>org.wildfly</groupId>
@@ -65,7 +65,7 @@
           -->
         <maven.min.version>3.2.5</maven.min.version>
 
-        <version.surefire.plugin>2.18</version.surefire.plugin>
+        <version.surefire.plugin>2.18.1</version.surefire.plugin>
         <!-- use older version of checkstyle as otherwise lots of checks fail -->
         <version.checkstyle>6.8</version.checkstyle>
         <!--
@@ -121,7 +121,7 @@
         <version.org.apache.cxf>3.1.8</version.org.apache.cxf>
         <version.org.apache.cxf.xjcplugins>3.0.5</version.org.apache.cxf.xjcplugins>
         <version.org.apache.ds>2.0.0-M20</version.org.apache.ds>
-        <version.org.apache.httpcomponents.httpasyncclient>4.1</version.org.apache.httpcomponents.httpasyncclient>
+        <version.org.apache.httpcomponents.httpasyncclient>4.1.2</version.org.apache.httpcomponents.httpasyncclient>
         <version.org.apache.jstl>1.2.5</version.org.apache.jstl>
         <version.org.apache.james.apache-mime4j>0.6</version.org.apache.james.apache-mime4j>
         <version.org.apache.lucene>5.3.1</version.org.apache.lucene>
@@ -166,7 +166,7 @@
         <version.org.jboss.metadata>10.0.0.Final</version.org.jboss.metadata>
         <version.org.jboss.narayana>5.5.0.Final</version.org.jboss.narayana>
         <version.org.jboss.mod_cluster>1.3.3.Final</version.org.jboss.mod_cluster>
-        <version.org.jboss.openjdk-orb>8.0.6.Final</version.org.jboss.openjdk-orb>
+        <version.org.jboss.openjdk-orb>8.0.7.Final</version.org.jboss.openjdk-orb>
         <version.org.jboss.xnio.netty.netty-xnio-transport>0.1.1.Final</version.org.jboss.xnio.netty.netty-xnio-transport>
         <version.org.jboss.resteasy>3.1.0.Final</version.org.jboss.resteasy>
         <version.org.jboss.seam.int>7.0.0.GA</version.org.jboss.seam.int>
@@ -200,23 +200,23 @@
         <version.org.jboss.weld.weld>2.4.1.Final</version.org.jboss.weld.weld>
         <version.org.jboss.weld.weld-api>2.4.Final</version.org.jboss.weld.weld-api>
         <version.org.jboss.ws.api>1.0.3.Final</version.org.jboss.ws.api>
-        <version.org.jboss.ws.spi>3.1.3.Final</version.org.jboss.ws.spi>
+        <version.org.jboss.ws.spi>3.1.4.Final</version.org.jboss.ws.spi>
         <version.org.jboss.ws.common>3.1.3.Final</version.org.jboss.ws.common>
         <version.org.jboss.ws.common.tools>1.2.2.Final</version.org.jboss.ws.common.tools>
         <version.org.jboss.ws.cxf>5.1.6.Final</version.org.jboss.ws.cxf>
         <version.org.jboss.ws.jaxws-undertow-httpspi>1.0.1.Final</version.org.jboss.ws.jaxws-undertow-httpspi>
-        <version.org.jgroups>3.6.11.Final</version.org.jgroups>
+        <version.org.jgroups>3.6.12.Final</version.org.jgroups>
         <version.org.jgroups.azure>1.0.0.Final</version.org.jgroups.azure>
         <version.org.jipijapa>1.0.1.Final</version.org.jipijapa>
         <version.org.kohsuke.metainf-services>1.7</version.org.kohsuke.metainf-services>
         <version.org.opensaml.opensaml>3.1.1</version.org.opensaml.opensaml>
         <version.org.picketbox.picketbox-commons>1.0.0.final</version.org.picketbox.picketbox-commons>
         <version.org.picketlink>2.5.5.SP4</version.org.picketlink>
-        <version.org.slf4j>1.7.7.jbossorg-1</version.org.slf4j>
+        <version.org.slf4j>1.7.22</version.org.slf4j>
         <version.org.syslog4j>0.9.30</version.org.syslog4j>
         <version.org.wildfly.build-tools>1.1.8.Final</version.org.wildfly.build-tools>
         <version.org.wildfly.checkstyle-config>1.0.5.Final</version.org.wildfly.checkstyle-config>
-        <version.org.wildfly.core>3.0.0.Alpha17</version.org.wildfly.core>
+        <version.org.wildfly.core>3.0.0.Alpha19</version.org.wildfly.core>
         <version.org.wildfly.arquillian>2.1.0.Alpha1</version.org.wildfly.arquillian>
         <version.org.wildfly.naming-client>1.0.0.Beta6</version.org.wildfly.naming-client>
         <version.org.wildfly.security.elytron-subsystem>1.0.0.Beta1</version.org.wildfly.security.elytron-subsystem>
@@ -5776,7 +5776,7 @@
             <dependency>
                 <groupId>org.jboss.ws.cxf</groupId>
                 <artifactId>jbossws-cxf-resources</artifactId>
-                <classifier>wildfly1000</classifier>
+                <classifier>wildfly1100</classifier>
                 <version>${version.org.jboss.ws.cxf}</version>
             </dependency>
 
@@ -6213,27 +6213,41 @@
     <!-- Profiles -->
     <profiles>
         <!--
-                  Name: modularizedJdk
-                  Descr: various workarounds activation for modularized JDK
+                  Name: JDK9
+                  Descr: various workarounds activation for JDK9
                 -->
         <profile>
-            <id>modularizedJdk</id>
+            <id>jdk9</id>
             <activation>
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <!-- [WFCORE-1431] remove SASL workaround -->
-                <modular.jdk.args>--add-exports=java.security.sasl/com.sun.security.sasl.digest=ALL-UNNAMED
-                    --add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
+                <modular.jdk.args>
+                    --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                    --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+                    --add-opens=java.base/java.security=ALL-UNNAMED
+                    --add-opens=java.base/java.math=ALL-UNNAMED
+                    --add-opens=java.base/java.io=ALL-UNNAMED
+                    --add-opens=java.base/java.net=ALL-UNNAMED
+                    --add-opens=java.base/java.util=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                    --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
+                    --add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED
+                    --add-opens=java.management/javax.management=ALL-UNNAMED
+                    --add-opens=java.management/javax.management.openmbean=ALL-UNNAMED
+                    --add-opens=java.naming/javax.naming=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED
                     --add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED
                 </modular.jdk.args>
                 <!-- [WFCORE-1494] remove JUL workaround -->
-                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true</modular.jdk.props>
+                <modular.jdk.props>-Dsun.util.logging.disableCallerCheck=true -Dsun.reflect.debugModuleAccessChecks=true</modular.jdk.props>
                 <!-- There are lots of issues with checkstyle runtime on JDK9, it somewhat works but really slows down build, disabling it for now-->
                 <checkstyle.skip>true</checkstyle.skip>
                 <!-- we override javassist to version that works on JDK9 -->
                 <version.org.javassist>3.22.0-CR1</version.org.javassist>
+                <version.org.jboss.byteman>4.0.0-BETA2</version.org.jboss.byteman>
             </properties>
             <build>
                 <plugins>
@@ -6243,10 +6257,10 @@
                         <version>${version.compiler.plugin}</version>
                         <configuration>
                             <!-- fork is needed so compiler args can be used -->
+                            <!--<release>8</release>-->
                             <fork>true</fork>
                             <compilerArgs>
-                                <arg>-J--add-modules</arg>
-                                <arg>-Jjava.annotations.common</arg>
+                                <arg>-J--add-modules=java.annotations.common,jdk.unsupported</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
