@@ -1292,8 +1292,14 @@
                 <jdk>9</jdk>
             </activation>
             <properties>
-                <modular.jdk.testsuite.args>${modular.jdk.args} --add-exports=java.base/sun.security.validator=ALL-UNNAMED
-                    --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED</modular.jdk.testsuite.args>
+                <modular.jdk.testsuite.args>${modular.jdk.args}
+                    --add-exports=java.base/sun.security.validator=ALL-UNNAMED
+                    --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+                    --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                    --add-opens=java.base/sun.security.validator=ALL-UNNAMED
+                    --add-opens=java.management/javax.management.remote=ALL-UNNAMED
+                    --add-opens=java.base/java.lang=ALL-UNNAMED
+                </modular.jdk.testsuite.args>
             </properties>
         </profile>
 
